examples/test/testpolicy17844.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17844
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key3: value9
      key27: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value7
          key13: value31
          key9: value46
      podSelector:
        matchLabels:
          key6: value39
          key26: value25
